# Rozetka_Beckend_4_0

./: main.py  pyproject.toml
migrations/versions/: 09c49426ede6_change.py
src/data/: parse_data.py
src/database/: db_actions.py  models.py
